@@ -1,4 +1,7 @@
 next:
+ 20100203
+    - (Jerome) Highlight current day
+
   20100201
     - (Jerome)  Start moving  all actual  drawing code  to  a separate
       class (wxDrawer).  This will allow  theming. In addition  to the
